@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,8 +43,8 @@ import java.io.*;
  *     Fixed the 5031200 bug.
  *
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} classload01.java
- * @run main/othervm/native --enable-preview -agentlib:classload01 classload01
+ * @compile classload01.java
+ * @run main/othervm/native -agentlib:classload01 classload01
  */
 
 
