@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,30 +23,102 @@
 
 /*
  * @test
- * @enablePreview
- * @requires os.arch=="amd64" | os.arch=="x86_64" | os.arch=="aarch64" | os.arch=="riscv64"
+ * @modules java.base/jdk.internal.foreign
  * @run testng TestLinker
+ * @run testng/othervm/policy=security.policy
+ *          -Djava.security.manager=default TestLinker
  */
 
+import jdk.internal.foreign.CABI;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.Linker;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
+import static java.lang.foreign.MemoryLayout.*;
+import static java.lang.foreign.ValueLayout.JAVA_CHAR;
+import static java.lang.foreign.ValueLayout.JAVA_SHORT;
+import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertSame;
 import static org.testng.Assert.assertNotSame;
+import static org.testng.Assert.assertTrue;
 
 public class TestLinker extends NativeTestHelper {
 
-    @Test
-    public void testLinkerOptionsCache() {
+    static final boolean IS_FALLBACK_LINKER = CABI.current() == CABI.FALLBACK;
+
+    record LinkRequest(FunctionDescriptor descriptor, Linker.Option... options) {}
+
+    @Test(dataProvider = "notSameCases")
+    public void testLinkerOptionsCache(LinkRequest l1, LinkRequest l2) {
         Linker linker = Linker.nativeLinker();
-        FunctionDescriptor descriptor = FunctionDescriptor.ofVoid(C_INT, C_INT);
-        MethodHandle mh1 = linker.downcallHandle(descriptor);
-        MethodHandle mh2 = linker.downcallHandle(descriptor, Linker.Option.firstVariadicArg(1));
+        MethodHandle mh1 = linker.downcallHandle(l1.descriptor(), l1.options());
+        MethodHandle mh2 = linker.downcallHandle(l2.descriptor(), l2.options());
         // assert that these are 2 distinct link request. No caching allowed
         assertNotSame(mh1, mh2);
+    }
+
+    @DataProvider
+    public static Object[][] notSameCases() {
+        FunctionDescriptor fd_II_V = FunctionDescriptor.ofVoid(C_INT, C_INT);
+        return new Object[][]{
+            {new LinkRequest(fd_II_V), new LinkRequest(fd_II_V, Linker.Option.firstVariadicArg(1))},
+            {new LinkRequest(FunctionDescriptor.ofVoid(JAVA_SHORT)), new LinkRequest(FunctionDescriptor.ofVoid(JAVA_CHAR))},
+            {new LinkRequest(FunctionDescriptor.ofVoid(JAVA_SHORT)), new LinkRequest(FunctionDescriptor.ofVoid(JAVA_CHAR))},
+        };
+    }
+
+    @Test(dataProvider = "namedDescriptors")
+    public void testNamedLinkerCache(FunctionDescriptor f1, FunctionDescriptor f2) {
+        Linker linker = Linker.nativeLinker();
+        MethodHandle mh1 = linker.downcallHandle(f1);
+        MethodHandle mh2 = linker.downcallHandle(f2);
+        // assert that these are the same link request, even though layout names differ
+        assertSame(mh1, mh2);
+    }
+
+    @DataProvider
+    public static Object[][] namedDescriptors() {
+        List<Object[]> cases = new ArrayList<>(Arrays.asList(new Object[][]{
+            { FunctionDescriptor.ofVoid(C_INT),
+                    FunctionDescriptor.ofVoid(C_INT.withName("x")) },
+            { FunctionDescriptor.ofVoid(structLayout(C_INT)),
+                    FunctionDescriptor.ofVoid(structLayout(C_INT).withName("x")) },
+            { FunctionDescriptor.ofVoid(structLayout(C_INT)),
+                    FunctionDescriptor.ofVoid(structLayout(C_INT.withName("x"))) },
+            { FunctionDescriptor.ofVoid(structLayout(sequenceLayout(1, C_INT))),
+                    FunctionDescriptor.ofVoid(structLayout(sequenceLayout(1, C_INT).withName("x"))) },
+            { FunctionDescriptor.ofVoid(structLayout(sequenceLayout(1, C_INT))),
+                    FunctionDescriptor.ofVoid(structLayout(sequenceLayout(1, C_INT.withName("x")))) },
+            { FunctionDescriptor.ofVoid(C_POINTER),
+                    FunctionDescriptor.ofVoid(C_POINTER.withName("x")) },
+            { FunctionDescriptor.ofVoid(C_POINTER.withTargetLayout(C_INT)),
+                    FunctionDescriptor.ofVoid(C_POINTER.withTargetLayout(C_INT.withName("x"))) },
+            { FunctionDescriptor.ofVoid(C_POINTER.withTargetLayout(C_INT)),
+                    FunctionDescriptor.ofVoid(C_POINTER.withName("x").withTargetLayout(C_INT.withName("x"))) },
+        }));
+
+        if (!IS_FALLBACK_LINKER) {
+            cases.add(new Object[]{ FunctionDescriptor.ofVoid(unionLayout(C_INT)),
+                    FunctionDescriptor.ofVoid(unionLayout(C_INT).withName("x")) });
+            cases.add(new Object[]{ FunctionDescriptor.ofVoid(unionLayout(C_INT)),
+                    FunctionDescriptor.ofVoid(unionLayout(C_INT.withName("x"))) });
+        }
+        if (C_LONG_LONG.byteAlignment() == 8) {
+            cases.add(new Object[]{ FunctionDescriptor.ofVoid(structLayout(C_INT, paddingLayout(4), C_LONG_LONG)),
+                    FunctionDescriptor.ofVoid(structLayout(C_INT, paddingLayout(4), C_LONG_LONG.withName("x"))) });
+            cases.add(new Object[]{ FunctionDescriptor.ofVoid(structLayout(C_INT, paddingLayout(4), C_LONG_LONG)),
+                    FunctionDescriptor.ofVoid(structLayout(C_INT, paddingLayout(4).withName("x"), C_LONG_LONG)) });
+        }
+
+        return cases.toArray(Object[][]::new);
     }
 
     @DataProvider
@@ -72,4 +144,32 @@ public class TestLinker extends NativeTestHelper {
         Linker.Option.captureCallState("foo"); // throws
     }
 
+    @Test(dataProvider = "canonicalTypeNames")
+    public void testCanonicalLayouts(String typeName) {
+        MemoryLayout layout = LINKER.canonicalLayouts().get(typeName);
+        assertNotNull(layout);
+        assertTrue(layout instanceof ValueLayout);
+    }
+
+    @DataProvider
+    public static Object[][] canonicalTypeNames() {
+        return new Object[][]{
+                { "bool" },
+                { "char" },
+                { "short" },
+                { "int" },
+                { "long" },
+                { "long long" },
+                { "float" },
+                { "double" },
+                { "void*" },
+                { "size_t" },
+                { "wchar_t" },
+        };
+    }
+
+    @Test(expectedExceptions=UnsupportedOperationException.class)
+    public void testCanonicalLayoutsUnmodifiable() {
+        LINKER.canonicalLayouts().put("asdf", C_INT);
+    }
 }
