@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -25,12 +23,7 @@
 
 package org.openjdk.bench.java.lang.foreign;
 
-import java.lang.foreign.Arena;
-import java.lang.foreign.Linker;
-import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.*;
 
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -44,6 +37,7 @@ import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 
+import java.lang.foreign.MemorySegment.Scope;
 import java.lang.invoke.MethodHandle;
 import java.util.concurrent.TimeUnit;
 
@@ -54,13 +48,14 @@ import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
+@Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED" })
 public class StrLenTest extends CLayouts {
 
-    Arena arena = Arena.openConfined();
+    Arena arena = Arena.ofConfined();
 
     SegmentAllocator segmentAllocator;
-    SegmentAllocator arenaAllocator = new RingAllocator(arena.scope());
+    SegmentAllocator arenaAllocator = new RingAllocator(arena);
+    SlicingPool pool = new SlicingPool();
 
     @Param({"5", "20", "100"})
     public int size;
@@ -81,7 +76,7 @@ public class StrLenTest extends CLayouts {
     @Setup
     public void setup() {
         str = makeString(size);
-        segmentAllocator = SegmentAllocator.prefixAllocator(MemorySegment.allocateNative(size + 1, arena.scope()));
+        segmentAllocator = SegmentAllocator.prefixAllocator(arena.allocate(size + 1, 1));
     }
 
     @TearDown
@@ -95,21 +90,28 @@ public class StrLenTest extends CLayouts {
     }
 
     @Benchmark
-    public int panama_strlen() throws Throwable {
-        try (Arena arena = Arena.openConfined()) {
-            MemorySegment segment = arena.allocateUtf8String(str);
+    public int panama_strlen_alloc() throws Throwable {
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocateFrom(str);
             return (int)STRLEN.invokeExact(segment);
         }
     }
 
     @Benchmark
     public int panama_strlen_ring() throws Throwable {
-        return (int)STRLEN.invokeExact(arenaAllocator.allocateUtf8String(str));
+        return (int)STRLEN.invokeExact(arenaAllocator.allocateFrom(str));
+    }
+
+    @Benchmark
+    public int panama_strlen_pool() throws Throwable {
+        try (Arena arena = pool.acquire()) {
+            return (int) STRLEN.invokeExact(arena.allocateFrom(str));
+        }
     }
 
     @Benchmark
     public int panama_strlen_prefix() throws Throwable {
-        return (int)STRLEN.invokeExact(segmentAllocator.allocateUtf8String(str));
+        return (int)STRLEN.invokeExact(segmentAllocator.allocateFrom(str));
     }
 
     @Benchmark
@@ -148,8 +150,8 @@ public class StrLenTest extends CLayouts {
         SegmentAllocator current;
         long rem;
 
-        public RingAllocator(SegmentScope session) {
-            this.segment = MemorySegment.allocateNative(1024, session);
+        public RingAllocator(Arena session) {
+            this.segment = session.allocate(1024, 1);
             reset();
         }
 
@@ -159,7 +161,7 @@ public class StrLenTest extends CLayouts {
                 reset();
             }
             MemorySegment res = current.allocate(byteSize, byteAlignment);
-            long lastOffset = segment.segmentOffset(res) + res.byteSize();
+            long lastOffset = res.address() - segment.address() + res.byteSize();
             rem = segment.byteSize() - lastOffset;
             return res;
         }
@@ -167,6 +169,40 @@ public class StrLenTest extends CLayouts {
         void reset() {
             current = SegmentAllocator.slicingAllocator(segment);
             rem = segment.byteSize();
+        }
+    }
+
+    static class SlicingPool {
+        final MemorySegment pool = Arena.ofAuto().allocate(1024);
+        boolean isAcquired = false;
+
+        public Arena acquire() {
+            if (isAcquired) {
+                throw new IllegalStateException("An allocator is already in use");
+            }
+            isAcquired = true;
+            return new SlicingPoolAllocator();
+        }
+
+        class SlicingPoolAllocator implements Arena {
+
+            final Arena arena = Arena.ofConfined();
+            final SegmentAllocator slicing = SegmentAllocator.slicingAllocator(pool);
+
+            public MemorySegment allocate(long byteSize, long byteAlignment) {
+                return slicing.allocate(byteSize, byteAlignment)
+                        .reinterpret(arena, null);
+            }
+
+            @Override
+            public Scope scope() {
+                return arena.scope();
+            }
+
+            public void close() {
+                isAcquired = false;
+                arena.close();
+            }
         }
     }
 }
